# doclayout-detector

./: .gitignore  Cargo.toml  index.html  package.json
scripts/: build-options.test.js  build.js  download-model.js  download-model.test.js  index-html.test.js  patch-wasi-imports.js  wasm-profiling.test.js
src/: annotate.rs  cli.rs  error.rs  lib.rs  main.rs  model.rs  native.rs  preprocess.rs  types.rs  wasi_stubs.rs  wasm.rs
src/pp_doclayout/: backbone.rs  config.rs  detector.rs  encoder.rs  labels.rs  layers.rs  mod.rs  model.rs  postprocess.rs  preprocess.rs  types.rs  weights.rs
tests/: annotate.rs  features.rs  logging.rs  pp_doclayout.rs  pp_layers.rs  pp_weights.rs
wasm/: doclayout-worker.js
