[package]
name = "doclayout-detector"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# burn runtime
burn = {
  package = "burn-core",
  version = "0.21",
  default-features = false,
  features = ["std"]
}
burn-ndarray = {
  version = "0.21",
  default-features = false,
  features = ["std"]
}
burn-nn = { version = "0.21", default-features = false, features = ["std"] }
burn-store = {
  version = "0.21",
  default-features = false,
  features = ["burnpack", "std"]
}
burn-wgpu = {
  version = "0.21",
  default-features = false,
  features = ["std"],
  optional = true
}

# model load
safetensors = "0.7"

# tracing
tracing = "0.1"
tracing-wasm = { version = "0.2", optional = true }

# async runtime
tokio = {
  version = "1",
  default-features = false,
  features = ["sync"],
  optional = true
}

# pdf load and render
pdfium = { package = "liteparse-pdfium", version = "1.3.0", optional = true }

# serde
serde = { version = "1", features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }
serde_json = "1"

# wasm
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

# misc
clap = { version = "4", features = ["derive"], optional = true }
png = { version = "0.17", optional = true }
thiserror = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {
  version = "0.4",
  default-features = false,
  features = ["wasm_js"]
}

[features]
default = ["backend-vulkan", "dep:clap", "dep:pdfium", "dep:png"]
backend-metal = ["burn-wgpu/metal", "dep:burn-wgpu"]
backend-ndarray = []
backend-vulkan = ["burn-wgpu/vulkan", "dep:burn-wgpu"]
backend-webgpu = [
  "burn-wgpu/webgpu",
  "dep:burn-wgpu",
  "dep:js-sys",
  "dep:pdfium",
  "dep:png",
  "dep:serde_bytes",
  "dep:serde-wasm-bindgen",
  "dep:tokio",
  "dep:tracing-wasm",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "panic_hook",
]
panic_hook = ["dep:console_error_panic_hook"]
